third_party/move/move-compiler-v2/tests/warnings-as-errors/unused.move
module 0x815::m {
    public fun test(x: u64) {
    }
}
